fixed white band on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,9 @@
 body {
-    letter-spacing: 1px;
-    overflow-x: hidden !important;
+  letter-spacing: 1px;
 }
 
 .body {
-    background-color: #F8F8F8;
+  background-color: #F8F8F8;
 }
 
 .first-section {
@@ -24,100 +23,100 @@ body {
     font-weight: normal;
   }
 
-.first-section-content {
-  display: flex;
-
-  #logo {
-    position: absolute;
-    top: 30px;
-    left: 50px;
-    height: 30px;
+  .first-section-content {
     display: flex;
-  }
+
+    #logo {
+      position: absolute;
+      top: 30px;
+      left: 50px;
+      height: 30px;
+      display: flex;
+    }
 
 
-  .first-section-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 75px;
-  }
+    .first-section-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 75px;
+    }
 
-  .first-section-image {
-    display: flex;
-    margin: auto;
-    margin-left: 50px;
-    margin-right: 50px;
+    .first-section-image {
+      display: flex;
+      margin: auto;
+      margin-left: 50px;
+      margin-right: 50px;
 
-    img {
-      width: 200px;
-      height: 406px;
+      img {
+        width: 200px;
+        height: 406px;
+      }
     }
   }
-}
 }
 
 .second-section {
-    background-image: url("back-2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: -7%;
+  background-image: url("back-2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -7%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  .icon {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 50px;
 
-    .icon {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      margin: 0 50px;
-
-      img {
-        width: 75px;
-      }
-
-      p {
-        text-align: center;
-        margin-top: 20px;
-        font-size: 14px;
-      }
-
-      span {
-        font-size:14px;
-        color:#9E9E9E;
-      }
-
-      #icon-trophee {
-        color: #349EE4;
-        font-size: 20px;
-      }
-
-      #icon-1 {
-        color: #5640D0;
-      }
-
-      #icon-2 {
-        color: #EC24A1;
-      }
-      #icon-3 {
-        color: #1DCFA8;
-      }
-      #icon-4 {
-        color: #40BCD0;
-      }
-      #trophee {
-        width: 100px;
-      }
+    img {
+      width: 75px;
     }
 
-    #trophee-section {
-      margin-top: 100px;
+    p {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
     }
-    .second-section-content {
-      display: flex;
-      justify-content: space-around;
-      margin: 75px;
+
+    span {
+      font-size:14px;
+      color:#9E9E9E;
     }
+
+    #icon-trophee {
+      color: #349EE4;
+      font-size: 20px;
+    }
+
+    #icon-1 {
+      color: #5640D0;
+    }
+
+    #icon-2 {
+      color: #EC24A1;
+    }
+    #icon-3 {
+      color: #1DCFA8;
+    }
+    #icon-4 {
+      color: #40BCD0;
+    }
+    #trophee {
+      width: 100px;
+    }
+  }
+
+  #trophee-section {
+    margin-top: 100px;
+  }
+  .second-section-content {
+    display: flex;
+    justify-content: space-around;
+    margin: 75px;
+  }
 }
 
 
@@ -168,31 +167,31 @@ body {
 }
 
 .fourth-section {
-    background-image: url("back-4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: -7%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 100vh;
-    color: #9842B4;
-    font-weight: lighter;
-    text-align: center;
+  background-image: url("back-4.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  color: #9842B4;
+  font-weight: lighter;
+  text-align: center;
 
-    h2 {
-      font-size: 36px;
+  h2 {
+    font-size: 36px;
+  }
+  h3 {
+    margin-bottom: 30px;
+  }
+  .bottom {
+    width: 700px;
+    input {
+      border: 1px solid lightgrey;
     }
-    h3 {
-      margin-bottom: 30px;
-    }
-    .bottom {
-      width: 700px;
-      input {
-        border: 1px solid lightgrey;
-      }
-    }
+  }
 }
 
 footer {
@@ -233,92 +232,99 @@ input {
 
 @media screen and (max-width: 500px) {
 
+  html, body {
+    overflow-x: hidden !important;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
   .first-section {
     height: 100%;
-  .first-section-content {
-    display: flex;
-    flex-direction: column-reverse;
-    margin-top: 90px;
-    .first-section-text {
+    .first-section-content {
+      display: flex;
+      flex-direction: column-reverse;
+      margin-top: 90px;
+      .first-section-text {
+        margin-top: 30px;
+        margin-bottom: 90px;
+        margin-left: 50px;
+        margin-right: 50px;
+        h1 {
+          font-size: 20px;
+        }
+        h3 {
+          font-size: 14px;
+        }
+        input {
+          margin: 20px 0;
+          margin-bottom: 50px;
+          font-size: 11px;
+          width: 90%;
+        }
+      }
+    }
+  }
+
+  .second-section {
+    height: 100%;
+    margin-top: -35%;
+
+    #trophee-section {
+      margin-top: 140px;
+    }
+    .second-section-content {
       margin-top: 30px;
-      margin-bottom: 90px;
-      margin-left: 50px;
-      margin-right: 50px;
-      h1 {
-        font-size: 20px;
-      }
-      h3 {
-        font-size: 14px;
-      }
-      input {
-        margin: 20px 0;
-        margin-bottom: 50px;
-        font-size: 11px;
-        width: 90%;
-      }
+      flex-direction: column;
     }
-}
-}
-
-.second-section {
-  height: 100%;
-  margin-top: -35%;
-
-  #trophee-section {
-    margin-top: 140px;
   }
-  .second-section-content {
-    margin-top: 30px;
-    flex-direction: column;
-  }
-}
 
-.third-section {
-  height: 100%;
-  .third-section-content {
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
+  .third-section {
+    height: 100%;
+    .third-section-content {
+      display: flex;
+      flex-direction: column;
+      font-size: 20px;
 
-    .third-section-text {
-      h3 {
-        font-size: 20px;
+      .third-section-text {
+        h3 {
+          font-size: 20px;
+        }
+        p {
+          font-size: 14px;
+          font-weight: normal;
+        }
       }
-      p {
-        font-size: 14px;
-        font-weight: normal;
+
+      .third-section-image {
+        margin: auto;
       }
+
     }
+  }
 
-    .third-section-image {
-      margin: auto;
+
+  .fourth-section {
+    height: 100%;
+
+    .bottom {
+      width: 90%;
     }
-
+    h2 {
+      font-size: 20px;
+      margin-top: 65px;
+    }
+    h3 {
+      font-size: 14px;
+    }
   }
-}
 
-
-.fourth-section {
-  height: 100%;
-
-  .bottom {
-    width: 90%;
+  footer {
+    img {
+      width: 30px;
+      margin-bottom: 10px;
+    }
   }
-  h2 {
-    font-size: 20px;
-    margin-top: 65px;
-  }
-  h3 {
-    font-size: 14px;
-  }
-}
-
-footer {
-  img {
-    width: 30px;
-    margin-bottom: 10px;
-  }
-}
 }
 
 
